--- a/clox.vcxproj
+++ b/clox.vcxproj
@@ -127,7 +127,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="clox.cpp" />
+    <ClCompile Include="src\chunk.c" />
+    <ClCompile Include="src\clox.c" />
+    <ClCompile Include="src\memory.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\chunk.h" />
+    <ClInclude Include="src\common.h" />
+    <ClInclude Include="src\memory.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
