--- a/clox.vcxproj
+++ b/clox.vcxproj
@@ -129,11 +129,13 @@
   <ItemGroup>
     <ClCompile Include="src\chunk.c" />
     <ClCompile Include="src\clox.c" />
+    <ClCompile Include="src\debug.c" />
     <ClCompile Include="src\memory.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\chunk.h" />
     <ClInclude Include="src\common.h" />
+    <ClInclude Include="src\debug.h" />
     <ClInclude Include="src\memory.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
