--- a/clox.vcxproj
+++ b/clox.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\debug.h" />
     <ClInclude Include="src\memory.h" />
+    <ClInclude Include="src\value.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
