--- a/clox.vcxproj.filters
+++ b/clox.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="src\value.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\vm.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common.h">
@@ -45,6 +48,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\value.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\vm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
